--- a/css/style.css
+++ b/css/style.css
@@ -301,16 +301,16 @@ header .search {
 }
 
 .showcase {
-    position: absolute;
+    position: relative;  /* Changed from absolute */
     right: 0;
     width: 100%;
     min-height: 100vh;
     display: flex;
-    justify-content: flex-start; /* Changed from space-between */
+    justify-content: flex-start;
     align-items: center;
     color: #fff;
     z-index: 2;
-    padding-left: 5%; /* Add left padding */
+    padding-left: 5%;
 }
 
 .showcase video {
@@ -320,6 +320,7 @@ header .search {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    z-index: -1;  /* Keep video behind content */
 }
 
 .text {
